# email-classifier

./: README.txt  config.py  pyproject.toml  render.yaml  requirements.txt
__pycache__/: .gitignore
app/: __init__.py
app/models/: classifier.py
app/routes/: main.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
app/utils/: file_handlers.py
