[tool.poetry]
name = "email-classifier"
version = "0.1.0"
description = "Classificador de emails com IA"
authors = ["Seu Nome <seu.email@exemplo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "2.3.3"
gunicorn = "20.1.0"
nltk = "3.8.1"
numpy = "1.23.5"
scikit-learn = "1.2.2"
joblib = "1.2.0"
python-dotenv = "0.19.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"